possible fix for:

https://issues.apache.org/jira/browse/AMQCPP-294
https://issues.apache.org/jira/browse/AMQCPP-298

Incorrect use of pthread_detach causes segfault on OSX

git-svn-id: https://svn.apache.org/repos/asf/activemq/activemq-cpp/trunk@1064906 13f79535-47bb-0310-9956-ffa450edef68